--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>学习通</title>
+    <link rel="stylesheet" type="text/css" href="./css/mui.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/head.css"/>
+    <link rel="stylesheet" type="text/css" href="css/iconfont.css"/>
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <script src="./js/jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/mui.min.js"></script>
 </head>
 <body>
-	
+	<header id="header">
+	    <div class="tit"><span class="tab_t">首页<span class="mui-icon iconfont icon-xiazai"></span></div>
+	</header>
+    <nav class="mui-bar mui-bar-tab footer">
+    	<a class="mui-tab-item">
+    		<span class="mui-icon mui-icon-home"></span>
+    		<span class="mui-tab-label">首页</span>
+    	</a>
+    	<a class="mui-tab-item">
+    		<span class="mui-icon mui-icon-chatbubble"></span>
+    		<span class="mui-tab-label">消息</span>
+    	</a>
+    	<a class="mui-tab-item mui-active">
+    		<span class="mui-icon mui-icon-compose"></span>
+    		<span class="mui-tab-label">笔记</span>
+    	</a>
+    	<a class="mui-tab-item">
+    		<span class="mui-icon mui-icon-person"></span>
+    		<span class="mui-tab-label">我</span>
+    	</a>
+    </nav>
 </body>
 </html>
