--- a/html/xx.html
+++ b/html/xx.html
@@ -36,34 +36,83 @@
             	<input type="search" class="mui-input-clear" placeholder="找人">
             </div>
             <nav class="recently_content">
-                <ul>
-                    <li>
-                        <img src="../images/head2.gif" alt="" class="img_head">
-                        <div><span class="cy_tit">网恋教父<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                <ul class="mui-table-view">
+                    <li class="mui-table-view-cell">
+                        <div class="mui-slider-right mui-disabled">
+                            <a class="mui-btn mui-btn-red mui-icon">删除</a>
+                        </div>
+                        <div class="mui-slider-handle">
+                            <div class="mui-table-cell">
+                            <img src="../images/head2.gif" alt="" class="img_head">
+                            <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                            </div>
+                        </div>
                     </li>
-                    <li>
-                        <img src="../images/head8.jpg" alt="" class="img_head">
-                        <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                    <li class="mui-table-view-cell">
+                        <div class="mui-slider-right mui-disabled">
+                            <a class="mui-btn mui-btn-red mui-icon">删除</a>
+                        </div>
+                        <div class="mui-slider-handle">
+                            <div class="mui-table-cell">
+                            <img src="../images/head8.jpg" alt="" class="img_head">
+                            <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                            </div>
+                        </div>
                     </li>
-                    <li>
-                        <img src="../images/head9.jpg" alt="" class="img_head">
-                        <div><span class="cy_tit">考古发现与探索<span class="neirong">我只是一个考古学家</span></span><span class=" xx_time">2018-11-27</span></div>
+                    <li class="mui-table-view-cell">
+                        <div class="mui-slider-right mui-disabled">
+                            <a class="mui-btn mui-btn-red mui-icon">删除</a>
+                        </div>
+                        <div class="mui-slider-handle">
+                            <div class="mui-table-cell">
+                            <img src="../images/head9.jpg" alt="" class="img_head">
+                            <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                            </div>
+                        </div>
                     </li>
-                    <li>
-                        <img src="../images/head2.gif" alt="" class="img_head">
-                        <div><span class="cy_tit">网恋教父<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                    <li class="mui-table-view-cell">
+                        <div class="mui-slider-right mui-disabled">
+                            <a class="mui-btn mui-btn-red mui-icon">删除</a>
+                        </div>
+                        <div class="mui-slider-handle">
+                            <div class="mui-table-cell">
+                            <img src="../images/head2.gif" alt="" class="img_head">
+                            <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                            </div>
+                        </div>
                     </li>
-                    <li>
-                        <img src="../images/head8.jpg" alt="" class="img_head">
-                        <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                    <li class="mui-table-view-cell">
+                        <div class="mui-slider-right mui-disabled">
+                            <a class="mui-btn mui-btn-red mui-icon">删除</a>
+                        </div>
+                        <div class="mui-slider-handle">
+                            <div class="mui-table-cell">
+                            <img src="../images/head8.jpg" alt="" class="img_head">
+                            <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                            </div>
+                        </div>
                     </li>
-                    <li>
-                        <img src="../images/head2.gif" alt="" class="img_head">
-                        <div><span class="cy_tit">网恋教父<span class="neirong"></span></span><span class="xx_time"></span></div>
+                    <li class="mui-table-view-cell">
+                        <div class="mui-slider-right mui-disabled">
+                            <a class="mui-btn mui-btn-red mui-icon">删除</a>
+                        </div>
+                        <div class="mui-slider-handle">
+                            <div class="mui-table-cell">
+                            <img src="../images/head2.gif" alt="" class="img_head">
+                            <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                            </div>
+                        </div>
                     </li>
-                    <li>
-                        <img src="../images/head8.jpg" alt="" class="img_head">
-                        <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time"></span></div>
+                    <li class="mui-table-view-cell">
+                        <div class="mui-slider-right mui-disabled">
+                            <a class="mui-btn mui-btn-red mui-icon">删除</a>
+                        </div>
+                        <div class="mui-slider-handle">
+                            <div class="mui-table-cell">
+                            <img src="../images/head8.jpg" alt="" class="img_head">
+                            <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </nav>
@@ -71,20 +120,20 @@
             <nav class="recently_content">
                 <ul class="li_btm">
                     <li>
-                        <img src="../images/head2.gif" alt="" class="img_head">
-                        <div><span class="cy_tit">网恋教父<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                        <img src="../images/head10.jpg" alt="" class="img_head">
+                        <div><span class="cy_tit">陈一只<span class="neirong">你真猛</span></span><span class="haoyou_guanzu">关注</span></div>
                     </li>
                     <li>
-                        <img src="../images/head8.jpg" alt="" class="img_head">
-                        <div><span class="cy_tit">表彰大会<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                        <img src="../images/head11.jpg" alt="" class="img_head">
+                        <div><span class="cy_tit">菜虚鲲<span class="neirong">鸡你太美</span></span><span class="haoyou_guanzu">关注</span></div>
                     </li>
                     <li>
-                        <img src="../images/head9.jpg" alt="" class="img_head">
-                        <div><span class="cy_tit">考古发现与探索<span class="neirong">我只是一个考古学家</span></span><span class=" xx_time">2018-11-27</span></div>
+                        <img src="../images/head12.jpg" alt="" class="img_head">
+                        <div><span class="cy_tit">得分<span class="neirong">手机联系人：得分</span></span><span class=" haoyou_guanzu">关注</span></div>
                     </li>
                     <li>
-                        <img src="../images/head2.gif" alt="" class="img_head">
-                        <div><span class="cy_tit">网恋教父<span class="neirong"></span></span><span class="xx_time">2018-11-27</span></div>
+                        <img src="../images/head13.jpg" alt="" class="img_head">
+                        <div><span class="cy_tit">猴霸天<span class="neirong">牛皮陈</span></span><span class="haoyou_guanzu">关注</span></div>
                     </li>
                 </ul>
             </nav>
@@ -109,6 +158,18 @@
     		<span class="mui-tab-label">我</span>
     	</a>
     </nav>
+    <script>
+        $(function(){
+            $('.tab_t .mui-icon').on('tap',function(){
+                console.log(1)
+                if ($('.pop').attr('class').length==3) {
+                    $('.pop').addClass('active')
+                }else{
+                    $('.pop').removeClass('active')
+                }
+            }) 
+        })
+    </script>
 	</body>
 
 </html>
