--- a/html/wd.html
+++ b/html/wd.html
@@ -15,7 +15,9 @@
 	</head>
 	<body>
           <header id="header">
+              <div></div>
               <div class="tit"><span class="tab_t">我</div>
+              <div></div>
           </header>
           <nav class="content">
               <div class="cont1">
