--- a/html/ziyuan.html
+++ b/html/ziyuan.html
@@ -18,7 +18,7 @@
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		<div class="tit">
 		    <div class="tab_t">
-                <span class="t_tit">课程</span>
+                <span class="t_tit">资源</span>
                 <span class="daohang">导航</span> 
 		    </div>
 		</div>
@@ -447,6 +447,7 @@
     </div>
 </body>
 <script type="text/javascript">  
+    mui.init();
     mui.ready(function() {  
         mui('.mui-scroll-wrapper').scroll({  
             bounce: true,  
