--- a/html/biji.html
+++ b/html/biji.html
@@ -15,7 +15,13 @@
 </head>
 <body>
 	<header id="header">
-        <div class="tit"><span class="tab_t">我的</span><span class="mui-icon mui-icon-arrowdown"></span><span class="mui-icon mui-icon-compose"></span></div>
+        <div class="tit">
+            <span class="tab_t">
+                <span>我的</span>
+                <span class="mui-icon mui-icon-arrowdown"></span>
+            </span>
+        </div>
+        <span class="mui-icon mui-icon-compose"></span>
     </header>
     <div class="mubu"></div>
     <div class="dsnone">
