--- a/html/shezhi.html
+++ b/html/shezhi.html
@@ -25,7 +25,7 @@
         </header>
         <div class="newcontent">
             <ul class="sz_ul">
-                <li>
+                <li class="tz_zh">
                     <span>账号管理</span>
                     <span class="mui-icon mui-icon-arrowright"></span>
                 </li>
@@ -56,4 +56,27 @@
             </ul>
         </div>
 	</body>
+     <script>
+        mui('.sz_ul').on('tap','.tz_zh',function(){
+            mui.openWindow({  
+                url: './zhanghao.html',  
+                id: 'q2',  
+                styles: {  
+                },  
+                extras: {  
+                },
+                show: {  
+                    autoShow: true, //页面loaded事件发生后自动显示，默认为true  
+                    aniShow: 'slide-in-right', //页面显示动画，默认为”slide-in-right“；  
+                    duration: '400' //页面动画持续时间，Android平台默认100毫秒，iOS平台默认200毫秒；  
+                },  
+                waiting: {  
+                    autoShow: true, //自动显示等待框，默认为true  
+                    title: '正在加载...', //等待对话框上显示的提示内容  
+                    options: {  
+                    }  
+                }  
+            })  
+        })
+    </script>
 </html>
